blocks/carousel/carousel.css
main > .section > div.carousel-wrapper {
  max-width: 100dvw;
  width: 100%;
  margin: 0;
  padding: 0;
}

.carousel {
  position: relative;
  overflow: hidden;
  width: 100%;
}

.carousel > ul {
  list-style: none;
  display: flex;
  margin: 0;
  padding: 0;
  overflow: scroll clip;
  scroll-behavior: smooth;
  scroll-snap-type: x mandatory;
}

.carousel > ul::-webkit-scrollbar {
  display: none;
}

.carousel ul > li {
  flex: 0 0 100%;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  justify-content: center;
  scroll-snap-align: start;
  position: relative;
  width: 100%;
  height: calc(100dvh - var(--header-height) - var(--horizontal-spacing));
  max-height: var(--site-width);
}

.carousel > ul > li picture {
  position: absolute;
  inset: 0;
}

.carousel > ul > li picture > img {
  height: 100%;
  width: 100%;
  object-fit: cover;
}

.carousel .carousel-overlay {
  position: absolute;
  inset: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  text-align: center;
  pointer-events: none;
  transition: bottom 0.3s, color 0.3s, opacity 0.3s, transform 0.3s;
  z-index: 1;
}

.carousel:hover .carousel-overlay {
  bottom: -66%;
  color: var(--color-background);
  opacity: 0.6;
  transform: scale(0.5);
}

.carousel .carousel-overlay h1 {
  font-size: clamp(var(--heading-size-xxl), 11vw, 155px);
}

.carousel .carousel-overlay p {
  font-size: clamp(var(--title-size-s), 4vw, var(--title-size-xxxl));
}

.carousel .carousel-overlay > div {
  width: 100%;
  padding: var(--horizontal-spacing);
  padding-left: calc(var(--horizontal-spacing) + 44px);
  padding-right: calc(var(--horizontal-spacing) + 44px);
}

.carousel .carousel-overlay svg {
  position: absolute;
  width: calc(100vw - (var(--horizontal-spacing) * 2) - 44px);
  max-width: var(--site-width);
  fill: var(--color-background);
  stroke: var(--color-background);
  color: var(--color-background);
  opacity: 0.6;
  transition: opacity 0.3s;
  z-index: -1;
  animation: spin 39s linear infinite;
}

.carousel:hover .carousel-overlay svg {
  opacity: 0;
}

@keyframes spin {
  from {
    transform: rotate(0);
  }

  to {
    transform: rotate(360deg);
  }
}

.carousel nav {
  position: absolute;
  inset: 0;
}

.carousel nav button.nav-arrow {
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  height: 44px;
  width: 44px;
  border-radius: 50%;
  background-color: transparent;
  color: var(--color-link);
  opacity: 0.5;
  transition: background-color 0.3s, color 0.3s, opacity 0.3s;
  cursor: pointer;
  z-index: 2;
}

.carousel nav button.nav-arrow::after {
  display: block;
  content: '';
  border: var(--border-m) solid;
  border-bottom: 0;
  border-left: 0;
  height: 12px;
  width: 12px;
  position: absolute;
  left: calc(50% + 2px);
  transform: translate(-50%, -50%) rotate(-135deg);
}

.carousel nav button.nav-arrow-next::after {
  transform: translate(-50%, -50%) rotate(45deg);
  left: calc(50% - 2px);
}

.carousel nav button.nav-arrow:first-of-type {
  left: calc(var(--horizontal-spacing) / 2);
}

.carousel nav button.nav-arrow:last-of-type {
  right: calc(var(--horizontal-spacing) / 2);
}

.carousel:hover nav button.nav-arrow {
  opacity: 1;
  background-color: #fff3;
}

.carousel nav button.nav-arrow:hover,
.carousel nav button.nav-arrow:focus {
  background-color: var(--color-link);
  color: var(--color-background);
}

